docs: the CloudHSM path can no longer be deployed - hsm1 is gone and this code cannot use hsm2m
Verifying section 5's "HSM type" row turned up something the row badly
understated. It said only that hsm1.medium's FIPS certificate #4218 moved to the
CMVP historical list on 2026-01-04 and that hsm2m.medium should be used instead.
True, but it reads as technical debt when it is actually a hard blocker: anyone
following README-CloudHSM.md today fails at the FIRST prerequisite.

Facts from AWS's own documentation, which combine to close the path:

* new hsm1.medium clusters cannot be created since April 2025;
* hsm1.medium reached end of support on 2026-03-31, a date now in the past;
* existing hsm1.medium clusters have been auto-migrated to hsm2m.medium since
  January 2026;
* hsm2m.medium requires Client SDK 5.9.0 or later.

This repo's code is hard-wired to SDK 3 - com.cavium.cfm2.LoginManager,
PARTITION_1, key_mgmt_util, cloudhsm-client-jce-latest.el7.x86_64.rpm. So the old
HSM type can no longer be created and this code cannot talk to the new one. AWS's
own migration guidance says moving to hsm2m requires upgrading to the latest
client SDK.

What makes this worse than a version bump is that it is a package, not one
change: SDK 5's JCE supports OpenJDK 17/21/25 only, so porting the SDK forces the
JDK to 17+, and section 4.1 already measured that this project throws
IllegalAccessError at runtime on JDK 17 unless the two --add-exports flags are
added to the launch command. SDK port, JDK bump and exports flags have to land
together.

Recorded in three places, because a reader can arrive from any of them: a new
warning block near the top of VERIFICATION.md (it changes what you should even
attempt), the rewritten section 5 rows with sources, and - most importantly - a
warning at the exact prerequisite in README-CloudHSM.md, since that is where
someone actually hits it. Also added hsm2m.medium's own certificate number
(#4703), which the document never carried.

The KMS arch